# hands-on-rag-llama-3

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  desktop.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
app/: main.py  ui.py
app/core/: ingestion.py  llm_logic.py  retrieval.py
app/routes/: api.py
config/: settings.py
