[project]
name = "datascience-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.50.0",
]
